--- a/public/index.html
+++ b/public/index.html
@@ -13,9 +13,9 @@
     </style>
   </head>
   <body>
-    <noscript>
+    <!-- <noscript>
       <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
-    </noscript>
+    </noscript> -->
     <!-- main.jsとappでリンク -->
     <div id="app"></div>
     <!-- built files will be auto injected -->
